# CNG-RTK-HUB

./: .gitignore  AI_CONTEXT_EASY.md  AI_CONTEXT_PRO.md  CURRENT_STATUS_EASY.md  CURRENT_STATUS_PRO.md  DEVELOPMENT.md  ENHANCED_NTRIP_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_QUICKSTART_EASY.md  MILESTONE_3_FINAL_STATUS.md  MILESTONE_3_READINESS.md  MILESTONE_4_PLAN.md  README.md  README_EASY.md  README_PRO.md  check_null_bytes.py  diagnose_null_bytes.py  fix_imports_and_validate_production.py  fix_null_bytes.py  pyproject.toml  requirements.txt  test_focused_production.py  test_ntrip_simple.py  test_production_readiness.py
.github/archives/: advanced-android-optimization.md  detailed-protocol-mappings.md
.github/chatmodes/: Analyzer - Discuss.chatmode.md  Refactor - Analyse.chatmode.md  Refactor - Implement.chatmode.md
.github/instructions/: UNIVERSAL_AI_AGENT_WORKFLOW.instructions.md
.github/notes/: AGGRESSIVE_OPTIMIZATION_PLAN.md  AI_OPTIMIZATION_EXECUTION_PLAN.md  ARCHITECTURE_DECISIONS.md  DOC_SIMPLIFICATION_PLAN.md  EXECUTION_READY.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MINIMALISM_STANDARDS.md  OPTIMIZATION_COMPLETE.md  UNIVERSAL_PROJECT_MEMO.md  android-requirements.md  android-resource-management.md  architecture-decisions.md  docs-aggressive-optimization-memo.md  dual-driver-architecture.md  tech-spec.md  (+13 more)
rtk_client/: README.md  pubspec.yaml
src/: __init__.py  __main__.py  rtk_service.py
tests/: __init__.py  test_driver_manager.py  test_interfaces.py  test_mount_manager.py  test_ntrip_client.py  test_websocket_server.py  test_zedf9p.py
(+23 files in other folders)
